# geotypes

./: .gitignore  .nojekyll  CHANGELOG.md  LICENSE.txt  README.md  index.html  pyproject.toml  robots.txt  search.json  setup.py  sitemap.xml
docs/: _quarto.yml  index.qmd  publish.sh
docs/tutorials/: DataTypes.ipynb
geotypes/: __init__.py  features.py  geometry.py  rasters.py
reference/: features.html  geometry.html  index.html  rasters.html
site_libs/bootstrap/: bootstrap.min.css
src/geotypes/: __init__.py  cli.py  features.py  geometry.py  rasters.py
tests/: test_conversions.py
tutorials/: DataTypes.html  Rasters.html
